--- a/.github/workflows/ai-tdd-flow.yml
+++ b/.github/workflows/ai-tdd-flow.yml
@@ -11,7 +11,6 @@ permissions:
 
 jobs:
   ai-development-cycle:
-    # ✅ ラベル判定は job 側でやる
     if: contains(github.event.issue.labels.*.name, 'ai-dev')
 
     runs-on: ubuntu-latest
@@ -24,140 +23,5 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.10'
+      - name: S
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install anthropic openai pytest
-
-      - name: Create required directories
-        run: |
-          mkdir -p .github/scripts
-          mkdir -p docs tests src
-
-      # スクリプト生成（モデル名 latest 修正済み）
-      - name: Create AI Agent Script
-        run: |
-          cat << 'EOF' > .github/scripts/ai_agent.py
-          import os
-          import argparse
-          from anthropic import Anthropic
-          from openai import OpenAI
-
-          parser = argparse.ArgumentParser()
-          parser.add_argument('--role', required=True)
-          parser.add_argument('--input', default='')
-          parser.add_argument('--context', default='')
-          parser.add_argument('--output', default='')
-          parser.add_argument('--target', default='')
-          parser.add_argument('--test-log', default='')
-          args = parser.parse_args()
-
-          def get_context(files):
-              c = ""
-              if not files:
-                  return ""
-              for p in files.split(','):
-                  p = p.strip()
-                  if os.path.exists(p):
-                      with open(p, 'r', encoding='utf-8') as f:
-                          c += f"\n--- {p} ---\n" + f.read()
-              return c
-
-          prompts = {
-              "architect": "あなたはアーキテクトです。ユーザーの要望から詳細な設計仕様書(Markdown)を作成してください。",
-              "tester": "あなたはQAエンジニアです。設計書に基づきPytest用のテストコードのみを作成してください。実装はまだありません。",
-              "developer": "あなたは開発者です。設計書とテストを読み、テストを通すPythonコードを実装してください。",
-              "reviewer": "あなたはコードレビュアーです。コードとテスト結果を読み、修正・最適化を行ってください。コードのみ出力して。"
-          }
-
-          content = ""
-
-          if args.role in ["architect", "tester", "developer"]:
-              client = Anthropic(api_key=os.environ.get("ANTHROPIC_API_KEY"))
-              p = f"{prompts[args.role]}\n\nInput:\n{args.input}\n\nContext:\n{get_context(args.context)}"
-              res = client.messages.create(
-                  model="claude-3-5-sonnet-latest",
-                  max_tokens=4000,
-                  messages=[{"role": "user", "content": p}],
-              )
-              content = res.content[0].text
-
-          elif args.role == "reviewer":
-              client = OpenAI(api_key=os.environ.get("OPENAI_API_KEY"))
-
-              if not args.target:
-                  raise SystemExit("--target is required for reviewer role")
-
-              with open(args.target, 'r', encoding='utf-8') as f:
-                  code = f.read()
-
-              log = ""
-              if args.test_log and os.path.exists(args.test_log):
-                  with open(args.test_log, 'r', encoding='utf-8') as f:
-                      log = f.read()
-
-              res = client.chat.completions.create(
-                  model="gpt-4o",
-                  messages=[
-                      {"role": "system", "content": "Output only code. No markdown fences."},
-                      {"role": "user", "content": f"{prompts['reviewer']}\n\nCode:\n{code}\n\nTest Log:\n{log}"}
-                  ],
-              )
-
-              content = res.choices[0].message.content or ""
-              content = content.replace("```python", "").replace("```", "").strip()
-
-              # reviewerは target を上書き
-              args.output = args.target
-
-          if args.output and content:
-              out_dir = os.path.dirname(args.output)
-              if out_dir:
-                  os.makedirs(out_dir, exist_ok=True)
-              with open(args.output, 'w', encoding='utf-8') as f:
-                  f.write(content)
-          EOF
-
-      - name: Claude - Design Phase
-        run: python .github/scripts/ai_agent.py --role architect --input "${{ github.event.issue.body }}" --output "docs/design_spec.md"
-
-      - name: Claude - TDD (Write Tests)
-        run: python .github/scripts/ai_agent.py --role tester --context "docs/design_spec.md" --output "tests/test_feature.py"
-
-      - name: Claude - Implementation
-        run: python .github/scripts/ai_agent.py --role developer --context "docs/design_spec.md,tests/test_feature.py" --output "src/feature.py"
-
-      - name: Run Tests (First Pass)
-        id: test_run_1
-        continue-on-error: true
-        run: |
-          pytest -q tests/test_feature.py > test_result.log 2>&1 || echo "Tests Failed"
-
-      - name: Codex - Review & Refactor
-        if: always()
-        run: python .github/scripts/ai_agent.py --role reviewer --target "src/feature.py" --test-log "test_result.log"
-
-      - name: Run Tests (Final Pass)
-        run: pytest -q tests/test_feature.py
-
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
-        with:
-          title: "AI Auto-Dev: ${{ github.event.issue.title }}"
-          body: |
-            AI Development Completed.
-            - Design: Claude
-            - Test & Code: Claude
-            - Review: Codex
-            closes #${{ github.event.issue.number }}
-          branch: "ai-feature/${{ github.event.issue.number }}"
-          base: main
-
-            closes #${{ github.event.issue.number }}
-          branch: "ai-feature/${{ github.event.issue.number }}"
-          base: main
